# CDF-16

./: .gitignore  README.md
Assembler/: CMakeLists.txt
Assembler/src/: argparse.cpp  fileParser.cpp  logger.cpp  main.cpp  util.cpp
Assembler/src/include/: argparse.hpp  logger.hpp  translationMap.hpp  util.hpp
Emulator/: CMakeLists.txt  README.md
Emulator/src/: argparse.cpp  cpu.cpp  flags.cpp  gpu.cpp  logger.cpp  main.cpp  memory.cpp  operations.cpp  storage.cpp  util.cpp
Emulator/src/include/: argparse.hpp  cpu.hpp  flags.hpp  gpu.hpp  logger.hpp  memory.hpp  operations.hpp  storage.hpp  util.hpp
